# aave-portfolio-manager

./: .env.example  Cargo.toml  Config.toml  README.md  dockerfile
.github/workflows/: rust.yml
src/: app_config.rs  args.rs  logger.rs  main.rs  portfolio.rs
src/aave_portfolio/: mod.rs  portfolio.rs  token_addresses.rs
src/aave_portfolio_tracker/: config.rs  mod.rs  service.rs
src/commands/: mod.rs
src/common_data/: mod.rs
src/cross_service_commands/: mod.rs
src/data_fetchers/: mod.rs  price_fetcher.rs
src/data_fetchers/defi_llama_data_fetcher/: mod.rs  price_fetcher.rs
src/data_fetchers/eth_chain_data_fetcher/: erc20.rs  mod.rs
src/data_fetchers/eth_chain_data_fetcher/aave/: mod.rs  pool.rs  pool_addresses_provider.rs  ui_pool_data_provider.rs
src/eth_node_requests/: erc20.rs
src/portfolio_data/: erc20.rs  erc20_registry.rs  mod.rs  portfolio.rs
src/telegram_bot/: command.rs  external_command.rs  mod.rs  telegram_client.rs
src/telegram_service/: command.rs  mod.rs  telegram_bot.rs
