[package]
name = "aave-portfolio-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
ethers = { version = "2.0", features = ["abigen", "ws"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.46", features = ["full"] }
