[package]
name = "aave-portfolio-tracker"
version = "0.1.0"
edition = "2024"
description = "Telegram bot and Rust service for monitoring AAVE v3 positions with health factor alerts."
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/optifat/aave-portfolio-manager"
authors = ["Pavel Smelov <pavsmel@hotmail.com>"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
config = "0.15"
dotenvy = "0.15"
env_logger = "0.11.8"
ethers = { version = "2.0", features = ["abigen", "ws"] }
log = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.46", features = ["full"] }
tokio-cron-scheduler = "0.14"
